# kanahebi-renderer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.circleci/: config.yml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json
cmake/: FindOptiX.cmake  compile_ptx.cmake
hdKanahebi/: CMakeLists.txt  README.md
hdKanahebi/blender-extension/: __init__.py  blender_manifest.toml  engine.py  properties.py  ui.py
hdKanahebi/include/: overloaded.h
hdKanahebi/include/hydra/: render_buffer.h  render_delegate.h  render_pass.h  renderer_plugin.h  scene_index_observer.h
hdKanahebi/include/math/: constant.h  matrix.h  vector.h
hdKanahebi/include/renderer/: camera.h  common.h  geometry.h  material.h  mesh.h  node_tree.h  renderer.h  scene.h  shared.h
hdKanahebi/kernel/: bsdf.h  camera.h  enum.h  generalized_schlick.h  image.h  lambert.h  params.h  render.cu  resolve.cu  shading_vertex.h  trace.h
hdKanahebi/resources/: UsdRenderers.json  plugInfo-linux.json  plugInfo-windows.json
hdKanahebi/resources/soho/parameters/: HdKanahebiRendererPlugin_Global.ds
hdKanahebi/src/hydra/: render_buffer.cpp  render_delegate.cpp  render_pass.cpp  renderer_plugin.cpp  scene_index_observer.cpp
hdKanahebi/src/renderer/: camera.cpp  geometry.cpp  material.cpp  mesh.cpp  node_tree.cpp  renderer.cpp  scene.cpp
kanahebi-cli/: CMakeLists.txt  README.md  kanahebi-cli.sh
kanahebi-cli/include/: error_filter.h  gl_init.h
kanahebi-cli/src/: main.cpp
oxu/: CMakeLists.txt  README.md
oxu/include/oxu/cuda/: buffer.h  context.h  graphics_resource.h  module.h  texture.h
oxu/include/oxu/optix/: context.h  module.h  pipeline.h  program_group.h
oxu/include/oxu/utils/: error_check.h
oxu/src/utils/: optix_function_table.cpp
scripts/: build-usd.blender-4.5.patch  build-usd.linux.blender-4.5.sh  build-usd.linux.cli.sh  build-usd.linux.houdini-21.0.sh  build-usd.windows.blender-4.5.ps1  build-usd.windows.cli.patch  build-usd.windows.cli.ps1  build-usd.windows.houdini-21.0.ps1  checkout-usd.linux.blender-4.5.sh  checkout-usd.linux.cli.sh  checkout-usd.linux.houdini-21.0.sh  checkout-usd.windows.blender-4.5.ps1  checkout-usd.windows.cli.ps1  checkout-usd.windows.houdini-21.0.ps1
